- fix: Cult door not rcd deconstructible.

--- a/Resources/Prototypes/_White/Entities/Cult/other_structures.yml
+++ b/Resources/Prototypes/_White/Entities/Cult/other_structures.yml
@@ -44,6 +44,8 @@
   - type: Construction
     graph: AirlockGlassCult
     node: airlock
+  - type: RCDDeconstructable
+    deconstructable: false
   - type: PlacementReplacement
     key: walls
   - type: Appearance
