--- a/Resources/Prototypes/Entities/Mobs/NPCs/regalrat.yml
+++ b/Resources/Prototypes/Entities/Mobs/NPCs/regalrat.yml
@@ -118,6 +118,9 @@
   - type: Grammar
     attributes:
       gender: male
+  - type: NightVision
+    toggleSound: null
+    color: "#404040"
 
 - type: entity
   id: MobRatKingBuff
