--- a/Resources/Prototypes/Procedural/salvage_difficulties.yml
+++ b/Resources/Prototypes/Procedural/salvage_difficulties.yml
@@ -1,10 +1,42 @@
 - type: salvageDifficulty
-  id: Moderate
+  id: Minimal
+  lootBudget: 10
+  mobBudget: 10
+  modifierBudget: 1
+  color: "#9FED5896"
+  recommendedPlayers: 1
+
+- type: salvageDifficulty
+  id: Minor
   lootBudget: 30
-  mobBudget: 25
+  mobBudget: 30
+  modifierBudget: 1
+  color: "#EFB34196"
+  recommendedPlayers: 2
+
+- type: salvageDifficulty
+  id: Moderate
+  lootBudget: 50
+  mobBudget: 50
   modifierBudget: 2
   color: "#52B4E996"
   recommendedPlayers: 2
+
+- type: salvageDifficulty
+  id: Hazardous
+  lootBudget: 70
+  mobBudget: 70
+  modifierBudget: 2
+  color: "#DE3A3A96"
+  recommendedPlayers: 3
+
+- type: salvageDifficulty
+  id: Extreme
+  lootBudget: 100
+  mobBudget: 100
+  modifierBudget: 3
+  color: "#D381C996"
+  recommendedPlayers: 4
 
     #9FED5896
     #EFB34196
