--- a/Resources/Prototypes/Entities/Structures/Machines/vending_machines.yml
+++ b/Resources/Prototypes/Entities/Structures/Machines/vending_machines.yml
@@ -327,6 +327,7 @@
     radius: 1.8
     energy: 1.6
     color: "#3db83b"
+  - type: CargoSellBlacklist
 
 - type: entity
   parent: VendingMachine
