Missing meteor presets (#29044)
* add meteors into missing game presets

* changes for real

* implement code

* this too

--- a/Resources/Prototypes/GameRules/meteorswarms.yml
+++ b/Resources/Prototypes/GameRules/meteorswarms.yml
@@ -5,6 +5,7 @@
   components:
   - type: GameRule
     minPlayers: 25
+    cancelPresetOnTooFewPlayers: false
   - type: MeteorScheduler
 
 - type: weightedRandomEntity
