--- a/Resources/Prototypes/game_presets.yml
+++ b/Resources/Prototypes/game_presets.yml
@@ -7,6 +7,7 @@
   description: survival-description
   rules:
     - RampingStationEventScheduler
+    - GameRuleMeteorScheduler
     - BasicRoundstartVariation
 
 - type: gamePreset
@@ -24,6 +25,7 @@
     - Cult
     - Wizard
     - BasicRoundstartVariation
+    - GameRuleMeteorScheduler
 
 - type: gamePreset
   id: Extended
@@ -48,6 +50,7 @@
   description: greenshift-description
   rules:
   - BasicRoundstartVariation
+  - GameRuleMeteorScheduler
 
 - type: gamePreset
   id: Secret
@@ -85,7 +88,7 @@
     - sandbox
   name: sandbox-title
   description: sandbox-description
-  showInVote: false
+  showInVote: false # Not suitable for use without admin intervention, since entity spamming can quickly crash a server
   maxPlayers: 5
   rules:
     - Sandbox
@@ -175,6 +178,7 @@
     - Pirates
     - BasicStationEventScheduler
     - BasicRoundstartVariation
+    - GameRuleMeteorScheduler
 
 #WD EDIT START
 - type: gamePreset
@@ -190,6 +194,7 @@
     - SubGamemodesRule
     - BasicStationEventScheduler
     - BasicRoundstartVariation
+    - GameRuleMeteorScheduler
 
 - type: gamePreset
   id: Changeling
@@ -204,6 +209,7 @@
     - SubGamemodesRule
     - BasicStationEventScheduler
     - BasicRoundstartVariation
+    - GameRuleMeteorScheduler
 
 - type: gamePreset
   id: Wizard
@@ -219,4 +225,5 @@
     - SubGamemodesRule
     - BasicStationEventScheduler
     - BasicRoundstartVariation
+    - GameRuleMeteorScheduler
 #WD EDIT END
