--- a/Resources/Prototypes/Entities/Clothing/OuterClothing/hardsuits.yml
+++ b/Resources/Prototypes/Entities/Clothing/OuterClothing/hardsuits.yml
@@ -685,17 +685,19 @@
       toggleable-clothing: !type:ContainerSlot
   - type: PowerCellSlot
     cellSlotId: cell_slot
+    fitsInCharger: false
   - type: ItemSlots
     slots:
       cell_slot:
         name: power-cell-slot-component-slot-name-default
         startingItem: PowerCellMicroreactor
+        disableEject: true
         whitelist:
           tags:
             - PowerCell
             - PowerCellSmall
   - type: EnergyDomeGenerator
-    damageEnergyDraw: 5
+    damageEnergyDraw: 20
     domePrototype: EnergyDomeSmallPink
   - type: ClothingSpeedModifier
     walkModifier: 0.9
