- add: Mindswap spell.

--- a/Resources/Prototypes/Magic/knock_spell.yml
+++ b/Resources/Prototypes/Magic/knock_spell.yml
@@ -4,6 +4,8 @@
   description: This spell opens nearby doors.
   noSpawn: true
   components:
+  - type: Magic
+    requiresClothes: false
   - type: InstantAction
     useDelay: 8
     itemIconStyle: BigAction
