--- a/Resources/Prototypes/_White/Wizard/spellbook_catalog.yml
+++ b/Resources/Prototypes/_White/Wizard/spellbook_catalog.yml
@@ -223,6 +223,22 @@
     stock: 1
 
 - type: listing
+  id: SpellBookMindswap
+  name: spellbook-mindswap-name
+  description: spellbook-mindswap-desc
+  productEntity: ScrollMindswap
+  icon:
+    sprite: Objects/Magic/magicactions.rsi
+    state: mindswap
+  cost:
+    SpellPoint: 2
+  categories:
+  - UtilitySpells
+  conditions:
+  - !type:ListingLimitedStockCondition
+    stock: 1
+
+- type: listing
   id: SpellBookHardsuit
   name: spellbook-hardsuit-name
   description: spellbook-hardsuit-desc
