--- a/Resources/Prototypes/Entities/Objects/Weapons/Guns/Rifles/rifles.yml
+++ b/Resources/Prototypes/Entities/Objects/Weapons/Guns/Rifles/rifles.yml
@@ -72,6 +72,10 @@
       visible: false
       sprite: White/Objects/Weapons/modulesOnWeapon.rsi
       map: [ "enum.ModuleVisualState.HandGuardModule" ]
+    - state: aim_module
+      visible: false
+      sprite: White/Objects/Weapons/modulesOnWeapon.rsi
+      map: [ "enum.ModuleVisualState.AimModule" ]
   - type: Gun
     fireRate: 5
     soundGunshot:
@@ -113,12 +117,21 @@
         whitelist:
           tags:
           - BaseBarrelModule
+      aim_module:
+        name: Aim Module
+        insertSound: /Audio/White/Gun/Modules/insertmodule.ogg
+        ejectSound: /Audio/White/Gun/Modules/ejectmodule.ogg
+        priority: 3
+        whitelist:
+          tags:
+          - BaseAimModule
   - type: ContainerContainer
     containers:
       gun_magazine: !type:ContainerSlot
       gun_chamber: !type:ContainerSlot
       handguard_module: !type:ContainerSlot
       barrel_module: !type:ContainerSlot
+      aim_module: !type:ContainerSlot
   - type: MagazineVisuals
     magState: mag
     steps: 1
