--- a/Resources/Prototypes/Entities/Objects/Weapons/Guns/SMGs/smgs.yml
+++ b/Resources/Prototypes/Entities/Objects/Weapons/Guns/SMGs/smgs.yml
@@ -99,6 +99,10 @@
       visible: false
       sprite: White/Objects/Weapons/modulesOnSMGs.rsi
       map: [ "enum.ModuleVisualState.HandGuardModule" ]
+    - state: aim_module
+      visible: false
+      sprite: White/Objects/Weapons/modulesOnSMGs.rsi
+      map: [ "enum.ModuleVisualState.AimModule" ]
   - type: Clothing
     sprite: Objects/Weapons/Guns/SMGs/c20r.rsi
   - type: Gun
@@ -141,12 +145,21 @@
         whitelist:
           tags:
           - BaseHandGuardModule
+      aim_module:
+        name: Aim Module
+        insertSound: /Audio/White/Gun/Modules/insertmodule.ogg
+        ejectSound: /Audio/White/Gun/Modules/ejectmodule.ogg
+        priority: 3
+        whitelist:
+          tags:
+          - BaseAimModule
   - type: ContainerContainer
     containers:
       gun_magazine: !type:ContainerSlot
       gun_chamber: !type:ContainerSlot
       handguard_module: !type:ContainerSlot
       barrel_module: !type:ContainerSlot
+      aim_module: !type:ContainerSlot
   - type: MagazineVisuals
     magState: mag
     steps: 6
@@ -177,6 +190,10 @@
           visible: false
           sprite: White/Objects/Weapons/modulesOnWeapon.rsi
           map: [ "enum.ModuleVisualState.HandGuardModule" ]
+        - state: aim_module
+          visible: false
+          sprite: White/Objects/Weapons/modulesOnWeapon.rsi
+          map: [ "enum.ModuleVisualState.AimModule" ]
     - type: Clothing
       sprite: Objects/Weapons/Guns/SMGs/drozd.rsi
     - type: Gun
@@ -221,12 +238,21 @@
           whitelist:
             tags:
             - BaseHandGuardModule
+        aim_module:
+          name: Aim Module
+          insertSound: /Audio/White/Gun/Modules/insertmodule.ogg
+          ejectSound: /Audio/White/Gun/Modules/ejectmodule.ogg
+          priority: 3
+          whitelist:
+            tags:
+            - BaseAimModule
     - type: ContainerContainer
       containers:
         gun_magazine: !type:ContainerSlot
         gun_chamber: !type:ContainerSlot
         handguard_module: !type:ContainerSlot
         barrel_module: !type:ContainerSlot
+        aim_module: !type:ContainerSlot
     - type: MagazineVisuals
       magState: mag
       steps: 1
@@ -310,6 +336,10 @@
         visible: false
         sprite: White/Objects/Weapons/modulesOnWeapon.rsi
         map: [ "enum.ModuleVisualState.HandGuardModule" ]
+      - state: aim_module
+        visible: false
+        sprite: White/Objects/Weapons/modulesOnWeapon.rsi
+        map: [ "enum.ModuleVisualState.AimModule" ]
   - type: Clothing
     sprite: Objects/Weapons/Guns/SMGs/wt550.rsi
   - type: ChamberMagazineAmmoProvider
@@ -354,12 +384,21 @@
         whitelist:
           tags:
             - BaseHandGuardModule
+      aim_module:
+        name: Aim Module
+        insertSound: /Audio/White/Gun/Modules/insertmodule.ogg
+        ejectSound: /Audio/White/Gun/Modules/ejectmodule.ogg
+        priority: 2
+        whitelist:
+          tags:
+            - BaseAimModule
   - type: ContainerContainer
     containers:
       gun_magazine: !type:ContainerSlot
       gun_chamber: !type:ContainerSlot
       handguard_module: !type:ContainerSlot
       barrel_module: !type:ContainerSlot
+      aim_module: !type:ContainerSlot
   - type: MagazineVisuals
     magState: mag
     steps: 6
@@ -410,6 +449,14 @@
           whitelist:
             tags:
             - BaseHandGuardModule
+        aim_module:
+          name: Aim Module
+          insertSound: /Audio/White/Gun/Modules/insertmodule.ogg
+          ejectSound: /Audio/White/Gun/Modules/ejectmodule.ogg
+          priority: 3
+          whitelist:
+            tags:
+            - BaseAimModule
 
 - type: entity
   name: Vector
