add: recall spell sounds

--- a/Resources/Prototypes/Magic/white.yml
+++ b/Resources/Prototypes/Magic/white.yml
@@ -274,6 +274,10 @@
   noSpawn: true
   components:
     - type: InstantRecall
+      linkSound:
+        path: /Audio/White/Magic/Recall/link.ogg
+      recallSound:
+        path: /Audio/White/Magic/Recall/recall.ogg
     - type: InstantAction
       useDelay: 10
       itemIconStyle: BigAction
