--- a/Resources/Prototypes/Entities/Objects/Consumable/Drinks/drinks_cups.yml
+++ b/Resources/Prototypes/Entities/Objects/Consumable/Drinks/drinks_cups.yml
@@ -6,6 +6,36 @@
   name: base cup
   abstract: true
   components:
+  - type: Damageable
+    damageContainer: Inorganic
+    damageModifierSet: Glass
+  - type: Destructible
+    thresholds:
+    - trigger:
+        !type:DamageTrigger
+        damage: 5
+      behaviors:
+      - !type:PlaySoundBehavior
+        sound:
+          collection: GlassBreak
+      - !type:SpillBehavior { }
+      - !type:SpawnEntitiesBehavior
+        spawn:
+          ShardGlass:
+            min: 1
+            max: 1
+        transferForensics: true
+      - !type:DoActsBehavior
+        acts: [ "Destruction" ]
+  - type: DamageOnLand
+    ignoreResistances: true
+    damage:
+      types:
+        Blunt: 5
+  - type: DamageOtherOnHit
+    damage:
+      types:
+        Blunt: 5
   - type: SolutionContainerManager
     solutions:
       drink:
@@ -39,6 +69,15 @@
         Blunt: 0
   - type: StaticPrice
     price: 20
+  - type: EmitSoundOnPickup
+    sound:
+      path: /Audio/White/Items/Cup/pickup.ogg
+  - type: EmitSoundOnDrop
+    sound:
+      path: /Audio/White/Items/Cup/drop.ogg
+  - type: EmitSoundOnLand
+    sound:
+      path: /Audio/White/Items/Cup/drop.ogg
 
 - type: entity
   parent: DrinkBaseCup
