--- a/Resources/Prototypes/Entities/Objects/Weapons/Guns/SMGs/smgs.yml
+++ b/Resources/Prototypes/Entities/Objects/Weapons/Guns/SMGs/smgs.yml
@@ -62,7 +62,7 @@
       collection: RiflesDrop
   - type: EmitSoundOnLand
     sound:
-      collection: RiflesPickUp
+      collection: RiflesDrop
 
 - type: entity
   name: Atreides
