- tweak: Tweak mindswap.

--- a/Resources/Prototypes/Magic/white.yml
+++ b/Resources/Prototypes/Magic/white.yml
@@ -330,6 +330,7 @@
         components:
         - MindContainer
         - ActionContainer
+        - MobState
       canTargetSelf: false
       checkCanInteract: false
       useDelay: 60
