fix: fix wrong rifle sounds + add sounds to lmgs

--- a/Resources/Prototypes/Entities/Objects/Weapons/Guns/Rifles/rifles.yml
+++ b/Resources/Prototypes/Entities/Objects/Weapons/Guns/Rifles/rifles.yml
@@ -58,7 +58,7 @@
       collection: RiflesDrop
   - type: EmitSoundOnLand
     sound:
-      collection: RiflesPickUp
+      collection: RiflesDrop
 
 - type: entity
   name: AKMS
