--- a/Resources/Prototypes/Catalog/Fills/Items/toolboxes.yml
+++ b/Resources/Prototypes/Catalog/Fills/Items/toolboxes.yml
@@ -6,27 +6,22 @@
   components:
   - type: StorageFill
     contents:
-      - id: CrowbarRed
-      - id: ClothingMaskBreath
-      - id: ClothingMaskBreath
-        prob: 0.5
-      - id: EmergencyOxygenTankFilled
-      - id: EmergencyOxygenTankFilled
-        prob: 0.5
-      - id: EmergencyNitrogenTankFilled
-      - id: EmergencyNitrogenTankFilled
-        prob: 0.5
-      - id: FoodTinMRE
-      - id: FoodTinMRE
-        prob: 0.5
-      - id: DrinkWaterBottleFull
-      - id: DrinkWaterBottleFull
-        prob: 0.5
-      - id: FlashlightLantern
-      - id: FlashlightLantern
-        prob: 0.5
-      - id: HarmonicaInstrument
-        prob: 0.15
+    - id: CrowbarRed
+    - id: RadioHandheld
+    - id: WelderMini
+    - id: FireExtinguisherMini
+    # Random lighting item orGroup
+    - id: FlashlightLantern
+      orGroup: LightingItem
+    - id: Flare
+      orGroup: LightingItem
+    - id: GlowstickBase
+      orGroup: LightingItem
+    # Low-chance items
+    - id: FoodSnackChocolate
+      prob: 0.15
+    - id: HarmonicaInstrument
+      prob: 0.15
 
 - type: entity
   id: ToolboxElectricalFilled
